# repryntt-public

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLA.md  COMMERCIAL-LICENSE.md  LICENSE  NETWORK.md  README.md  TOOLS.md  WHITEPAPER.md  install.py  install.sh  license_check.py  pyproject.toml  repryntt.bat  repryntt.ps1
.github/workflows/: ci.yml  cla.yml
apps/desktop/: .gitignore  README.md  package.json
brain/: .gitkeep
brain/skill_packages/: blockchain_architecture.json  conversation_mastery.json  deep_research.json  trading_mastery.json
brain/skills/: proto_qualia_framework.md
config/: andrew-nav.service  knowledge_api_feeder.json  mcp_servers.json  repryntt-chain.service
docker/: Dockerfile  Dockerfile.node  docker-compose.cluster.yml  docker-compose.yml  entrypoint.sh
docs/: SELF_PROMPTING.md  SYSTEM_DEEP_DIVE.md  ai_assisted_install.md  bootstrap-protection.md  compute_marketplace_policy.md  production_bootstrap.md  security_audit.md  whitepaper.md
reference/: consciousness_meta_prompts.py  consciousness_nervous_system.py  cot_to_academic_paper.py  jarvis_trading_cycle.py  map_sync_network.py  p2p_economy_bridge.py  saige_consciousness_daemon.py  saige_economy_monitor.py  saige_p2p.py  simulation_toolkit.py  verifiable_ai_computation.md  video_production.py
repryntt/: __init__.py  __main__.py  cli.py  cloud_runner.py  features.py  first_run.py  hardware_profile.py  llm.py  mcp_server.py  onboard.py  paths.py  platform_utils.py  services.py
repryntt-core/: Cargo.toml
repryntt-core/src/: block.rs  chain.rs  checkpoint.rs  contract.rs  crypto.rs  dao.rs  device.rs  economy.rs  election.rs  entity.rs  genesis.rs  gossip.rs  lib.rs  main.rs  mempool.rs  migrate.rs  network.rs  node.rs  peer.rs  pop.rs  producer.rs  pycompat.rs  rpc.rs  staking.rs  storage.rs  sync.rs  token.rs  transaction.rs
repryntt-core/tests/: integration.rs  integration_adversarial.rs
repryntt/agents/: __init__.py  activity_frameworks.py  agent_profiles.json  chain_manager.py  coherence_eval.py  council.py  critic_gate.py  departments.py  error_signatures.py  framework_tracker.py  intake_gate.py  marketplace_prompts.py  orchestrator.py  persistent_agents.py  profiles.py  supervisor.py  swarm.py  task_queue.py  task_queue_tools.py  task_router.py  task_system.py  task_types.py
repryntt/bootstrap/: __init__.py  registry.py
repryntt/bootstrap_templates/: CAPABILITIES.md  GENESIS.md  HEARTBEAT.md  HOUSEHOLD.md  IDENTITY.md  INTERESTS.md  MY_FILES.md  OPERATOR.md  PROFILE.md  PROTOCOL.md  PULSE.md  README.md  RECALL.md  REVENUE.md  SELF_AWARENESS.md  SPIRIT.md  STARTUP.md  TOOLKIT.md  VALUES.md  critic_mode.md
repryntt/brain/: __init__.py  bootstrap.py  brain_impl.py  factory.py  protocol.py  schema.py
repryntt/codeforge/: __init__.py  agent_loop.py  benchmark.py  environments.py  events.py  forge.py  generator.py  governance.py  models.py  packager.py  runtimes.py  swarm.py  tester.py  validator.py
repryntt/comms/: __init__.py  adapter.py  ai_initiator.py  auth.py  channel_config.json  channel_gateway.py  conversation_brain_integration.py  conversation_logger.py  conversation_manager.py  conversation_orchestrator.py  home_assistant.py  p2p.py  p2p_config.json
repryntt/config/: bootstrap_policy.json
repryntt/core/: __init__.py  alignment.py  connection_detector.py  micro_chain_engine.py  repryntt-stack.service  watchdog.py  watchdog_sudoers.example
repryntt/cortex/: __init__.py  dispatcher.py  model_config.py  model_registry.py  region_base.py  resource_manager.py
repryntt/database/: __init__.py  config.py  models.py  session.py
repryntt/desktop/: __init__.py  app.py  dashboard.py  tray.py
repryntt/economy/: OFFICIAL_CHECKSUMS.json  __init__.py  balances.json  chain_storage.py  code_integrity.py  compute_config.py  compute_marketplace.py  compute_provider.py  crypto_utils.py  dao.py  entity_verification.py  escrow.py  fee_mempool.py  gossip.py  header_sync.py  kademlia.py  light_client.py  llm_cold_start.py  logging_config.py  manager.py  merkle.py  node_identity.py  node_state.json  node_wallet.py  p2p_economy_bridge.py  payment_gateway.py  personal_wallet.py  proof_of_power.py  proof_of_productive_work.py  protocol.py  qnode2.py  resource_registry.py  rust_chain_client.py  safe_serialize.py  scale_integration.py  seai.py  secure_crypto.py  smartcontracts.py  spaceminer.py  start_node1.sh  (+5 more)
repryntt/hardware/: __init__.py  _camera_guard.py  bench_check.py  camera.py  camera_broker.py  camera_check.py  curate_nav_data.py  depth_perception.py  driver_policy.py  driver_trainer.py  explorer.py  local_perception.py  local_vlm.py  motor_characterize.py  motor_client.py  motor_daemon.py  motor_lease.py  nav_cortex.py  nav_planner.py  optical_flow.py  proprioception.py  robotics_nudge.py  ros2.py  ros2_publisher.py  social_behavior.py  sonar.py  spatial_context.py  spatial_map.py  tank.py  tank_sim.py  voice.py  yolo_perception.py
repryntt/learning/: __init__.py  engine.py  identity.py  llm_learner.py  llm_tools.py  tools.py  trading.py
repryntt/paid_features/: __init__.py  _http.py  coherence.py  forge.py  video.py
repryntt/routing/: __init__.py  ai_queue.py  mcp_client.py  provider_router.py  task_hierarchy.py
repryntt/search/: __init__.py  grokipedia.py  knowledge_router.py  url_guard.py  web_search_tools.py  x_search.py
repryntt/setup/: __init__.py  (+3 more)
scripts/: _patch_update_bootstrap_file.py  create_baseline_brain.py  fix_gpio_pinmux.py  license_audit.py  llm_toggle.sh  nexus_watchdog.sh  repryntt-motor-daemon.service  repryntt-pinmux.service  seed_autonomy_long_run_test.py  setup_firewall.sh  start_production.sh  voice_clone.py  volume_dial.py
tests/: __init__.py  test_all_tools.py  test_all_tools_e2e.py  test_autonomy_long_run_seed.py  test_bootstrap_guard.py  test_compute_provider.py  test_framework_evolution.py  test_framework_evolution_subsystem.py  test_hearing_runtime.py  test_popw_reliability.py  test_production_readiness.py  test_pursuit_seeders.py  test_pursuit_selector.py  test_task_queue_completion_gate.py  tool_verification_results.json
(+286 files in other folders)
